# ada-drive

./: .gitignore  .mcp.json  README.md  pyproject.toml
.claude-plugin/: plugin.json
hooks/: hooks.json  install-deps.sh
scripts/: start-server.sh
skills/setup/: SKILL.md
skills/status/: SKILL.md
skills/sync/: SKILL.md
skills/tidy/: SKILL.md
src/drive/: __init__.py  __main__.py  cli.py  server.py
